--- a/ngapp/src/app/prompts/prompts.component.html
+++ b/ngapp/src/app/prompts/prompts.component.html
@@ -67,7 +67,7 @@
       </div>
       <!--Display Prompt-->
       <div *ngIf="prompt.length > 0">
-        <div *ngIf="promptType == 'combination' || promptType == 'proverb'" (click)="showTranslation = !showTranslation" class="showTranslation"> {{showTranslation? 'Hide translation': 'Show translation'}}</div>
+        <div *ngIf="promptType == 'combination' || promptType == 'proverb'" (click)="showTranslation = !showTranslation" class="showTranslation"> {{showTranslation? ts.l.hide_translation : ts.l.show_translation}}</div>
         <!-- Story Prompt Options -->
         <div *ngIf="promptType == 'combination'">
           <div *ngFor="let lp of combinationLevelPreferences">
