--- a/ngapp/src/app/student/recording/recording.component.scss
+++ b/ngapp/src/app/student/recording/recording.component.scss
@@ -141,6 +141,10 @@ $corner-button-width: 10rem;
   box-shadow: 0px 0px 5px 3px rgba(0,0,0,0.22);
 }
 
+.wordSpan {
+  padding-right: 4px;
+}
+
 .playAudioBtn {
     background-color: var(--scealai-green);
     color: white;
