--- a/ngapp/src/app/student/recording/recording.component.scss
+++ b/ngapp/src/app/student/recording/recording.component.scss
@@ -68,6 +68,7 @@ $corner-button-width: 10rem;
 .recordingBookHeader {
   display: flex;
   justify-content: space-between;
+  padding-top: 20px;
 }
 
 .myStoriesBtn {
@@ -222,6 +223,12 @@ $corner-button-width: 10rem;
 
 .trashBtn:hover {
   background-color: rgb(119, 5, 5);
+}
+
+.btnContainer {
+  width: 100%;
+  display: flex;
+  align-items: center;
 }
 
 .footerText {
