update backend model

--- a/ngapp/src/app/profile/register-profile/register-profile.component.html
+++ b/ngapp/src/app/profile/register-profile/register-profile.component.html
@@ -114,7 +114,7 @@
           </div>
           <div *ngIf="thirdLevelOption === thirdLevelOptions[5]" class="form-group">
             <p class="formLabel"> {{ts.l.please_specify}}: </p>
-            <input class="form-control inputField" id="other" [(ngModel)]="otherPostGradStudies" name="otherStudies">
+            <input class="form-control inputField" id="other" [(ngModel)]="otherPostgradStudies" name="otherStudies">
           </div>
           <!-- Studying in the USA -->
           <div *ngIf="studentSchoolLevel === studentSchoolLevelOptions[4]" class="form-group">
